роутинг - ок. 404 - ок

--- a/src/index.pug
+++ b/src/index.pug
@@ -8,7 +8,10 @@ html(lang='en')
     link(href='https://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet')
     link(rel='stylesheet', href='../node_modules/materialize-css/dist/css/materialize.min.css')
   body
-    h1 Test
-    ul
-      li
+    .main
+      h1 Test
+      ul
+        li Item 1
+        li Item 2
+        li Item 3
 
